# 2024-NewLundObs

panscales-tests/: CMakeLists.txt  README.md  lund-analysis.cc  plot-fractal.py  plot.py  run-lund-lxplus.sub  run-lund.py  run-lund.sh
panscales-tests/2024-10-29-results/: panglobal  panglobal-beta00  panglobal-beta05  panglobal-cffe  panlocal  panlocal-beta00  panlocal-beta05  pythia8
